--- a/src/qt/forms/optionsdialog.ui
+++ b/src/qt/forms/optionsdialog.ui
@@ -33,10 +33,10 @@
        <item>
         <widget class="QCheckBox" name="bitcoinAtStartup">
          <property name="toolTip">
-          <string>Automatically start Peercoin after logging in to the system.</string>
+          <string>Automatically start 2GiveCoin after logging in to the system.</string>
          </property>
          <property name="text">
-          <string>&amp;Start Peercoin on system login</string>
+          <string>&amp;Start 2GiveCoin on system login</string>
          </property>
         </widget>
        </item>
@@ -47,6 +47,23 @@
          </property>
          <property name="text">
           <string>Enforce checkpoints</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="minting">
+         <property name="text">
+          <string>&amp;Earn interest by staking eligible 2GIVE held in wallet (POS)</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="mining">
+         <property name="text">
+          <string>&amp;Compete for block rewards by mining (POW)</string>
          </property>
         </widget>
        </item>
@@ -103,7 +120,7 @@
        <item>
         <widget class="QCheckBox" name="mapPortUpnp">
          <property name="toolTip">
-          <string>Automatically open the Peercoin client port on the router. This only works when your router supports UPnP and it is enabled.</string>
+          <string>Automatically open the 2GiveCoin client port on the router. This only works when your router supports UPnP and it is enabled.</string>
          </property>
          <property name="text">
           <string>Map port using &amp;UPnP</string>
@@ -113,7 +130,7 @@
        <item>
         <widget class="QCheckBox" name="connectSocks">
          <property name="toolTip">
-          <string>Connect to the Peercoin network through a SOCKS proxy (e.g. when connecting through Tor).</string>
+          <string>Connect to the 2GiveCoin network through a SOCKS proxy (e.g. when connecting through Tor).</string>
          </property>
          <property name="text">
           <string>&amp;Connect through SOCKS proxy:</string>
@@ -287,7 +304,7 @@
          <item>
           <widget class="QValueComboBox" name="lang">
            <property name="toolTip">
-            <string>The user interface language can be set here. This setting will take effect after restarting Peercoin.</string>
+            <string>The user interface language can be set here. This setting will take effect after restarting 2GiveCoin.</string>
            </property>
           </widget>
          </item>
@@ -320,7 +337,7 @@
        <item>
         <widget class="QCheckBox" name="displayAddresses">
          <property name="toolTip">
-          <string>Whether to show Peercoin addresses in the transaction list or not.</string>
+          <string>Whether to show 2GiveCoin addresses in the transaction list or not.</string>
          </property>
          <property name="text">
           <string>&amp;Display addresses in transaction list</string>
