--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -1,11 +1,10 @@
 <!DOCTYPE RCC><RCC version="1.0">
     <qresource prefix="/icons">
-        <file alias="bitcoin">res/icons/bitcoin.png</file>
-        <file alias="peercoin">res/icons/peercoin.png</file>
+        <file alias="bitcoin">res/icons/givecoin-128.png</file>
         <file alias="address-book">res/icons/address-book.png</file>
         <file alias="quit">res/icons/quit.png</file>
         <file alias="send">res/icons/send.png</file>
-        <file alias="toolbar">res/icons/toolbar.png</file>
+        <file alias="toolbar">res/icons/givecoin-16.png</file>
         <file alias="connect_0">res/icons/connect0_16.png</file>
         <file alias="connect_1">res/icons/connect1_16.png</file>
         <file alias="connect_2">res/icons/connect2_16.png</file>
@@ -23,9 +22,8 @@
         <file alias="editpaste">res/icons/editpaste.png</file>
         <file alias="editcopy">res/icons/editcopy.png</file>
         <file alias="add">res/icons/add.png</file>
-        <file alias="bitcoin_testnet">res/icons/bitcoin_testnet.png</file>
-        <file alias="peercoin_testnet">res/icons/peercoin_testnet.png</file>
-        <file alias="toolbar_testnet">res/icons/toolbar_testnet.png</file>
+        <file alias="bitcoin_testnet">res/icons/givecoin-128.png</file>
+        <file alias="toolbar_testnet">res/icons/givecoin-16.png</file>
         <file alias="edit">res/icons/edit.png</file>
         <file alias="history">res/icons/history.png</file>
         <file alias="overview">res/icons/overview.png</file>
@@ -44,6 +42,37 @@
         <file alias="debugwindow">res/icons/debugwindow.png</file>
         <file alias="sign">res/icons/sign.png</file>
         <file alias="verify">res/icons/verify.png</file>
+        <file alias="cwc-icon-get-big">res/icons/cwc-icon-get-big.png</file>
+        <file alias="cwc-icon-get-small">res/icons/cwc-icon-get-small.png</file>
+        <file alias="cwc-icon-give-big">res/icons/cwc-icon-give-big.png</file>
+        <file alias="cwc-icon-give-small">res/icons/cwc-icon-give-small.png</file>
+        <file alias="cwc-icon-overview">res/icons/cwc-icon-overview.png</file>
+        <file alias="cwc-icon-send-big">res/icons/cwc-icon-send-big.png</file>
+        <file alias="cwc-icon-send-small">res/icons/cwc-icon-send-small.png</file>
+        <file alias="cwc-icon-stake-small">res/icons/cwc-icon-stake-small.png</file>
+        <file alias="cwc-icon-transactions">res/icons/cwc-icon-transactions.png</file>
+        <file alias="cwc-icon-qrcode-big">res/icons/cwc-icon-qrcode-big.png</file>
+        <file alias="icon-qrcode-big">res/icons/coin-icon-qrcode-big64.png</file>
+        <file alias="Give">res/icons/2Give-Give32.png</file>
+        <file alias="Dashboard">res/icons/2Give-Dashboard32.png</file>
+        <file alias="Receive">res/icons/2Give-Receive32.png</file>
+        <file alias="Transactions">res/icons/2Give-Transactions32.png</file>
+        <file alias="Contacts">res/icons/2Give-Contacts32.png</file>
+        <file alias="Donate">res/icons/2Give-Donate32.png</file>
+        <file alias="Export">res/icons/2Give-Export32.png</file>
+        <file alias="Rewards20">res/icons/2Give-Rewards20.png</file>
+        <file alias="Rewards16">res/icons/2Give-Rewards16.png</file>
+        <file alias="Interest16">res/icons/2Give-Interest16.png</file>
+        <file alias="Give20">res/icons/2Give-Give20.png</file>
+        <file alias="Donate20">res/icons/2Give-Donate20.png</file>
+        <file alias="Receive20">res/icons/2Give-Receive20.png</file>
+        <file alias="2Give-Heart">res/icons/2Give-Heart.png</file>
+        <file alias="QRCODE32">res/icons/2Give-QRCODE.png</file>
+        <file alias="Gift">res/icons/2Give-Gift32.png</file>
+        <file alias="Rewards16G">res/icons/2Give-Rewards16G.png</file>
+        <file alias="Interest16G">res/icons/2Give-Interest16G.png</file>
+        <file alias="Piggy32">res/icons/2Give-Piggy32.png</file>
+        <file alias="Piggy20">res/icons/2Give-Piggy20.png</file>
     </qresource>
     <qresource prefix="/images">
         <file alias="about">res/images/about.png</file>
